external-crates/move/crates/move-cli/tests/sandbox_tests/named_address_conflicts_in_error/args.exp
Command `build`:
INCLUDING DEPENDENCY Dep
BUILDING use_named_address
error[E04007]: incompatible types
  ┌─ ./sources/example.move:3:9
  │
2 │     public fun next(): b::m::Y {
  │                        ------- Expected: '(b=0x41)::m::Y'
3 │         b::m::x()
  │         ^^^^^^^^^ Invalid return expression
  │
  ┌─ ./dep/sources/m.move:4:21
  │
4 │     public fun x(): X {
  │                     - Given: '(a=0x41)::m::X'

